# github-status

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: release-draft-template.yaml
.github/workflows/: publish-binaries.yaml  testing.yaml
src/: github_api.rs  main.rs  options.rs
