[package]
name = "github-status"
version = "1.2.0"
edition = "2021"
authors = ["Paul Sanders <psanders1@gmail.com>"]
description = "github-status is a CLI to check the status of GitHub."
documentation = "https://github.com/sanders41/github-status"
homepage = "https://github.com/sanders41/github-status"
repository = "https://github.com/sanders41/github-status"
readme = "README.md"
exclude = ["assets/*"]
keywords = ["github", "status", "command-line", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["color", "suggestions", "derive"] }
colored = "2.1.0"
pager = "0.16.1"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.128"
